<resources>
    <string name="app_name">eCart Customer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy_terms">I have read and agree to the Privacy Policy and Terms &amp; Conditions.</string>
    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>
    <string name="add">ADD</string>
    <string name="selected">selected</string>
    <string name="limit_exceeded">Can select a maximum of&#160;</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="title_home">Home</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">New Password</string>
    <string name="msg_reset_pass_success">Your password reset successfully, please login with your password.</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Wish List</string>
    <string name="title_cart">Cart</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="via">Via&#160;</string>
    <string name="cod">C.O.D.</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="search">Search</string>
    <string name="no_category_found">No Category Found</string>
    <string name="view_all">View All</string>
    <string name="welcome">Welcome to&#160;</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered">Sign up</string>
    <string name="login">Log in</string>
    <string name="forgot_text">Forgot password ?</string>
    <string name="change_password">Change Password </string>
    <string name="old_pass">Old Password </string>
    <string name="reset_pass_text">Reset Your Password</string>
    <string name="change_password_">Change Password ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="profile">Profile</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="alternate_mobile">Alternate Mobile No</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="pincode">PinCode</string>
    <string name="is_login">Welcome Guest</string>
    <string name="is_mobile">Login&#160;/&#160;Register</string>
    <string name="next">NEXT</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="fav_text">Wish List</string>
    <string name="share_text">Share</string>
    <string name="similar_product">Similar Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="limit_alert">Apologies, max product quantity limit reached.</string>
    <string name="delete_address_msg">Are you sure, you want to remove this address?</string>
    <string name="delete_address">Remove Address</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="total_amt">Subtotal</string>
    <string name="item_amount">Items Amount :</string>
    <string name="promo_applied">PromoCode Discount :</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge1">Delivery Charge :</string>
    <string name="free">Free</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="offers">Offers</string>
    <string name="promo_code">Promo Code</string>
    <string name="view_offers">View Offers</string>
    <string name="no_item_in_cart">Your cart is empty</string>
    <string name="no_item_in_cart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="filter_by">Filter By</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="pay_u_pay">PayU Money</string>
    <string name="paypal_pay">PayPal</string>
    <string name="paystack">Paystack</string>
    <string name="razor_payment">RazorPay</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paypal">PayPal</string>
    <string name="resend">Resend OTP</string>
    <string name="alert_not_register_num1">Mobile number is not registered on&#160;</string>
    <string name="alert_not_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="alert_register_num1">Mobile number already registered with&#160;</string>
    <string name="alert_register_num2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?\nAfter changed password session will be logout.</string>
    <string name="verify_your_mobile">Verify Your Mobile Number</string>
    <string name="payu_money">payumoney</string>
    <string name="cash_on_delivery">cod</string>
    <string name="order_placed1">Order Placed!</string>
    <string name="order_error">Error while payment!</string>
    <string name="order_cancel">Cancel payment!</string>
    <string name="wallet_recharged">Wallet Recharged!</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="summary">View All Orders</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total :&#160;</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="txn_cancel_msg">Are you sure you want to cancel the transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qty_1">Qty:&#160;</string>
    <string name="submit">Submit</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="canceled_on">Order Cancelled On : &#160;</string>
    <string name="name_1">Name :&#160;</string>
    <string name="mobile_no_1">\nMobile No :&#160;</string>
    <string name="address_1">\nAddress :&#160;</string>
    <string name="total_">Total&#160;</string>
    <string name="order_track_detail">Order Details</string>
    <string name="_title_order_track">Track Order</string>
    <string name="ordered_id">Ordered Id:&#160;</string>
    <string name="order_date">Order Date:&#160;</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="re_order">Re-Order!</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="return_item">Return Item</string>
    <string name="cancel">Cancel</string>
    <string name="no_track_msg">No Tracking Found..</string>
    <string name="return_order">Return Order</string>
    <string name="quantity_tracking">Qty:</string>
    <string name="view_details">View Details</string>
    <string name="view_detail">View Detail</string>
    <string name="order_received">Order\nReceived</string>
    <string name="order_processed">Order\nProcessed</string>
    <string name="order_shipped">Order\nShipped</string>
    <string name="order_delivered">Order\nDelivered</string>
    <string name="order_picked_up">Order\nPicked Up</string>
    <string name="order_cancel_">Order\nCancelled</string>
    <string name="order_returned">Order\nReturned</string>
    <string name="order_ready_to_pickup">Ready To\nPickUp</string>
    <string name="returned">Returned</string>
    <string name="other_details">Other Details</string>
    <string name="price_details">Price Detail</string>
    <string name="order_status">Order Status</string>
    <string name="cancel_order_detail">Cancel Order</string>
    <string name="cancel_msg">Are you sure, you want to cancel this item ?</string>
    <string name="reorder_msg">You want to re-order?\nAll products will be added to cart.</string>
    <string name="return_msg">Are you sure, you want to return this item ?</string>
    <string name="rate">Rate Us</string>
    <string name="notifications">Notifications</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="enter_valid_mobile_no">Enter valid mobile number</string>
    <string name="enter_pass">Enter password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_confirm_pass">Enter Confirm password</string>
    <string name="no_match_old_pass">Old password not matched</string>
    <string name="pass_not_match">Password not matched</string>
    <string name="share_app">Share App</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="wallet_balance">Wallet&#160;</string>
    <string name="wallet_balance1">Wallet :&#160;</string>
    <string name="remaining_wallet_balance">Remaining Wallet Balance:&#160;</string>
    <string name="final_total">Final Total : </string>
    <string name="location_1">Location :&#160;</string>
    <string name="remove">Remove</string>
    <string name="product_return">Product return &#160;</string>
    <string name="day_max_limit">day maximum limit</string>
    <string name="ok">OK</string>
    <string name="share_via">Share via</string>
    <string name="write_your_review_here">Write your review here....</string>
    <string name="post_review">Post Review</string>
    <string name="change_layout">Change Layout</string>
    <string name="update">Update</string>
</resources>