<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:backgroundTint="@color/bg_color"
    android:background="@drawable/login_curve"
    android:orientation="vertical"
    android:padding="@dimen/dimen_30dp">

    <ImageView
        android:id="@+id/imgChangePasswordClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_close" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:hint="@string/old_pass">

        <EditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="@dimen/dimen_10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:hint="@string/new_pass">

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="@dimen/dimen_10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:hint="@string/confirm_new_pass">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="@dimen/dimen_10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/card_shadow"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="@dimen/_18sdp"
        android:paddingBottom="@dimen/_18sdp"
        android:text="@string/change_pass"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>