<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_curve_reverse"
    android:backgroundTint="@color/bg_color"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_close" />

    <RatingBar
        android:id="@+id/ratingProduct"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:foregroundTintMode="multiply"
        android:isIndicator="false"
        android:numStars="5"
        android:progressBackgroundTint="@color/gray"
        android:progressTint="@color/active_yellow"
        android:secondaryProgressTint="@color/active_yellow"
        android:stepSize="0.1" />

    <EditText
        android:id="@+id/edtReviewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingProduct"
        android:layout_marginTop="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/write_your_review_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtReviewMessage"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_weight="1"
            android:background="@drawable/card_shadow"
            android:backgroundTint="@color/colorPrimary"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_weight="1"
            android:background="@drawable/card_shadow"
            android:backgroundTint="@color/colorPrimary"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/post_review"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>