<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/lytDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/lytTab"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_empty_cart"
            android:contentDescription="@string/app_name" />

        <TextView
                android:textAlignment="viewStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn"
            android:text="@string/shop_now"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>